--- a/ontogen/js/templates/ontoproperties.handlebars
+++ b/ontogen/js/templates/ontoproperties.handlebars
@@ -6,7 +6,7 @@
   </div>
   <div class="form-group">
     <label for="input-keywords">Keywords</label>
-    <input type="text" class="form-control" id="input-keywords" value="{{keywordStr}}">
+    <input type="text" class="form-control" id="input-keywords" value="{{keywords}}">
   </div>
 
   <button type="button" id="submit-details" data-conceptId={{id}} class="btn btn-default">Submit</button>
