--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -1,21 +1,34 @@
-<div class="row" id="actiobar">
+<div class="row">
+<form class="form-inline" role="form">
+  <div class="form-group col-md-4">
+    <label class="sr-only" for="inputName">Name</label>
+    <input type="text" class="form-control input-sm" id="input-name" value="{{name}}" data-trigger="hover" data-title="Name">
+  </div>
+  <div class="form-group col-md-5">
+    <label class="sr-only" for="inputKeywords">Keywords</label>
+    <input type="text" class="form-control input-sm" id="input-keywords" value="{{keywords}}" data-trigger="hover" data-title="Keywords">
+  </div>
+  <div class="form-group col-md-3">
+  <button id="change-concept" type="button" class="btn btn-primary btn-sm">Submit</button>
+  <button id="properties-concept" type="button" class="btn btn-default btn-sm">Properties</button>
+  <button id="vis-increase" type="button" class="btn btn-default btn-xs">
+    <span class="glyphicon glyphicon-plus"></span>
+  </button>
+  <button id="vis-decrease" type="button" class="btn btn-default btn-xs">
+    <span class="glyphicon glyphicon-minus"></span>
+  </button>
+</div>
+</form> 
+</div>
+<div class="row" style="margin-top:10px">
   <form class="form-inline" role="form">
-     <div class="form-group col-md-3">
-      <label class="sr-only" for="inputName">Name</label>
-      <input type="text" class="form-control" id="inputName" value="{{name}}">
-    </div>
-    <div class="form-group col-md-4">
-      <label class="sr-only" for="inputKeywords">Keywords</label>
-      <input type="text" class="form-control" id="inputKeywords" value="{{keywords}}">
-    </div>
-    <div class="form-group col-md-1">
-      <button type="button" class="btn btn-default">Submit</button>
-    </div>
-    <div class="form-group col-md-4">
-      <button type="button" class="btn btn-success">New</button>
-      <button type="button" class="btn btn-primary">Suggest</button>
-      <button type="button" class="btn btn-warning">Move</button>
-      <button type="button" class="btn btn-danger">Delete</button>
-    </div>
+  <button id="suggest-keywords" type="button" class="btn btn-default btn-sm">Suggest Keywords</button>
+    <button id="new-concept" type="button" class="btn btn-success btn-sm">New Sub-Concept</button>
+    <button id="suggest-concepts" type="button" class="btn btn-primary btn-sm">Suggest Sub-Concepts</button>
+    <button id="move-concept" type="button" class="btn btn-warning btn-sm">Move</button>
+    <button id="delete-concept" type="button" class="btn btn-danger btn-sm">Delete</button>
+    <button id="suggest-keywords" type="button" class="btn btn-default btn-sm">View Concept Documents</button>
+    <button id="suggest-keywords" type="button" class="btn btn-default btn-sm">Change Visualization</button>
   </form> 
 </div>
+
