AL Questions and Answers implemented.

--- a/ontogen/js/templates/querymodal.handlebars
+++ b/ontogen/js/templates/querymodal.handlebars
@@ -11,13 +11,11 @@
         <div class="form-group" style="margin-top:5px">
           <textarea id="query-text" class="form-control" rows="6"></textarea>
         </div> <!-- /from group -->
-        <div class="form-group pull-right">
-          <button id="make-query" data-cid={{concept.$id}} type="button" class="btn btn-primary">Query</button>
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        </div> <!-- /form group -->
       </form>
       </div>
-      <div id="query-modal-footer" class="modal-footer">
+      <div id="modal-query-footer" class="modal-footer">
+        <button id="make-query" data-cid={{concept.$id}} type="button" class="btn btn-primary">Query</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
