Prevent delete of root. minor interface improvements.

--- a/ontogen/js/templates/deletemodal.handlebars
+++ b/ontogen/js/templates/deletemodal.handlebars
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="modal-delete" tabindex="-1" role="dialog" aria-labelledby="modal-delete-label" aria-hidden="true">
+<div class="modal fade" id="modal-delete" data-backdrop="false" tabindex="-1" role="dialog" aria-labelledby="modal-delete-label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
