--- a/ontogen/js/templates/ontoload.handlebars
+++ b/ontogen/js/templates/ontoload.handlebars
@@ -1,5 +1,5 @@
 <!-- OntoLoad Modal -->
-<div class="modal fade" id="loadModal" tabindex="-1" role="dialog" aria-labelledby="loadModalLabel" aria-hidden="true">
+<div class="modal fade" id="loadModal" data-backdrop="false" tabindex="-1" role="dialog" aria-labelledby="loadModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
