--- a/ontogen/js/templates/ontonew.handlebars
+++ b/ontogen/js/templates/ontonew.handlebars
@@ -1,5 +1,5 @@
 <!-- OntoNew Modal -->
-<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="newModalLabel" aria-hidden="true">
+<div class="modal fade" id="newModal" data-backdrop="false" tabindex="-1" role="dialog" aria-labelledby="newModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
