--- a/ontogen/js/templates/movemodal.handlebars
+++ b/ontogen/js/templates/movemodal.handlebars
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="modal-move" tabindex="-1" role="dialog" aria-labelledby="modal-move-label" aria-hidden="true">
+<div class="modal fade" id="modal-move" data-backdrop="false" tabindex="-1" role="dialog" aria-labelledby="modal-move-label" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
