new visualizations added. plus some cosmetic changes.

--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -21,7 +21,7 @@
 </div>
 </form> 
 </div>
-<div class="row" style="margin-top:10px">
+<div class="row" style="margin-top:10px; margin-left:0px; margin-right:0px;">
   <form class="form-inline" role="form">
     <button id="new-concept" type="button" class="btn btn-success btn-sm">New Sub-Concept</button>
     <button id="suggest-concepts" type="button" class="btn btn-primary btn-sm">Suggest Sub-Concepts</button>
