Select Visualization in Action Bar implemented. Minor style fixes.

--- a/ontogen/js/templates/ontoload.handlebars
+++ b/ontogen/js/templates/ontoload.handlebars
@@ -8,8 +8,7 @@
       </div> <!-- /modal header -->
       <div class="modal-body">
            <div class="form-group">
-            <label for="ontoPicker">Ontology: </label>
-            <select class="selectpicker" id="ontoPicker">
+            <select class="selectpicker" id="onto-picker">
               {{#each ontologies}}
               <option>{{name}}</option>
               {{/each}}
