--- a/ontogen/css/ontogen.css
+++ b/ontogen/css/ontogen.css
@@ -17,6 +17,10 @@ body {
   padding-left: 5px;
 }
 
+.navbar {
+  margin-bottom: 10px;
+}
+
 /* Class for extra space between rows */
 .row-space-top-20 {
   margin-top: 20px;
@@ -31,16 +35,6 @@ body {
 .menu-control > .btn {
   margin-left: 5px;
   margin-right: 5px;
-}
-
-#ConceptTree {
-		width: auto;
-		height: 300px;
-		margin-bottom: 15px;
-}
-
-#suggestions-container {
-  margin-top:20px;
 }
 
 /* GRAPH */
