--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -21,15 +21,21 @@
 </div>
 </form> 
 </div>
-<div class="row" style="margin-top:10px; margin-left:0px; margin-right:0px;">
+<div class="row" style="margin-top:10px">
   <form class="form-inline" role="form">
     <button id="new-concept" type="button" class="btn btn-success btn-sm">New Sub-Concept</button>
     <button id="suggest-concepts" type="button" class="btn btn-primary btn-sm">Suggest Sub-Concepts</button>
     <button id="query-concept" type="button" class="btn btn-primary btn-sm">Sub-Concept From Query</button>
     <button id="move-concept" type="button" class="btn btn-warning btn-sm">Move</button>
     <button id="delete-concept" type="button" class="btn btn-danger btn-sm">Delete</button>
-    <button id="suggest-keywords" type="button" class="btn btn-default btn-sm">View Documents</button>
-    <button id="suggest-keywords" type="button" class="btn btn-default btn-sm">Visualization</button>
+    <button id="view-documents" type="button" class="btn btn-default btn-sm">View Documents</button>
+    <label for="visualization-picker">Visualization: </label>
+    <select class="selectpicker" id="visualization-picker">
+    {{#each visualizations}}
+    <option>{{this}}</option>
+    {{/each}}
+    </select>
+
   </form> 
 </div>
 
