Changes to QMiner API integrated up to "Move" and incl "suggest".

--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -30,7 +30,7 @@
     <button id="delete-concept" type="button" class="btn btn-danger btn-sm">Delete</button>
     <button id="view-documents" type="button" class="btn btn-default btn-sm">View Documents</button>
     <label for="visualization-picker">Visualization: </label>
-    <select class="selectpicker" id="visualization-picker">
+    <select class="selectpicker" id="visualization-picker" data-width="160px">
     {{#each visualizations}}
     <option>{{this}}</option>
     {{/each}}
