--- a/ontogen/js/templates/ontonew.handlebars
+++ b/ontogen/js/templates/ontonew.handlebars
@@ -44,7 +44,7 @@
                     <div class="form-group">
                       <label for="stemmerPicker">Stemmer: </label>
                       <select class="selectpicker" id="stemmerPicker">
-                        {{#each this.langopts.stemmers}}
+                        {{#each this.langopts.stemmer}}
                         <option>{{this}}</option>
                         {{/each}}
                       </select>
