working with new version of AL.

--- a/ontogen/js/templates/querymodal.handlebars
+++ b/ontogen/js/templates/querymodal.handlebars
@@ -9,8 +9,16 @@
       <div class="modal-body" id="modal-query-main">
         <form class="form-horizontal" role="form">
         <div class="form-group" style="margin-top:5px">
-          <textarea id="query-text" class="form-control" rows="6"></textarea>
+          <textarea id="query-text" class="form-control" rows="1"></textarea>
         </div> <!-- /from group -->
+        <div class="btn-group" data-toggle="buttons">
+          <label class="btn btn-primary">
+            <input type="radio" name="options" id="query-opt-simple"> Simple Query
+          </label>
+          <label class="btn btn-primary">
+            <input type="radio" name="options" id="query-opt-a"> Use Active Learning
+          </label>
+        </div>
       </form>
       </div>
       <div id="modal-query-footer" class="modal-footer">
