Simple Query, download visualization button. Server implementation of keyword suggestion.

--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -18,6 +18,10 @@
   <button id="vis-increase" type="button" class="btn btn-default btn-xs">
     <span class="glyphicon glyphicon-plus"></span>
   </button>
+  <button id="vis-download" type="button" class="btn btn-default btn-xs">
+    <span class="glyphicon glyphicon-download"></span>
+  </button>
+
 </div>
 </form> 
 </div>
@@ -25,7 +29,7 @@
   <form class="form-inline" role="form">
     <button id="new-concept" type="button" class="btn btn-success btn-sm">New Sub-Concept</button>
     <button id="suggest-concepts" type="button" class="btn btn-primary btn-sm">Suggest Sub-Concepts</button>
-    <button id="query-concept" type="button" class="btn btn-primary btn-sm">Sub-Concept From Query</button>
+    <button id="query-concept" type="button" class="btn btn-primary btn-sm query-concept">Sub-Concept From Query</button>
     <button id="move-concept" type="button" class="btn btn-warning btn-sm">Move</button>
     <button id="delete-concept" type="button" class="btn btn-danger btn-sm">Delete</button>
     <button id="view-documents" type="button" class="btn btn-default btn-sm">View Documents</button>
