--- a/ontogen/js/templates/querymodal.handlebars
+++ b/ontogen/js/templates/querymodal.handlebars
@@ -11,12 +11,12 @@
         <div class="form-group" style="margin-top:5px">
           <textarea id="query-text" class="form-control" rows="1"></textarea>
         </div> <!-- /from group -->
-        <div class="btn-group" data-toggle="buttons">
-          <label class="btn btn-primary">
+        <div class="btn-group" id="query-type" data-toggle="buttons">
+          <label class="btn btn-primary active">
             <input type="radio" name="options" id="query-opt-simple"> Simple Query
           </label>
           <label class="btn btn-primary">
-            <input type="radio" name="options" id="query-opt-a"> Use Active Learning
+            <input type="radio" name="options" id="query-opt-al"> Use Active Learning
           </label>
         </div>
       </form>
