Sub-concepts from classifying a concept.

--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -11,7 +11,7 @@
   <div class="form-group col-md-5">
   <button id="change-concept" type="button" class="btn btn-primary btn-sm">Change</button>
   <button id="suggest-keywords" type="button" class="btn btn-warning btn-sm">Suggest Keywords</button>
-  <button id="properties-concept" type="button" class="btn btn-default btn-sm">Properties</button>
+  <!--  <button id="properties-concept" type="button" class="btn btn-default btn-sm">Properties</button> -->
   <button id="view-documents" type="button" class="btn btn-default btn-sm">Documents</button>
   <button id="build-classifier" type="button" class="btn btn-success btn-sm">Build</button>
   
@@ -23,15 +23,16 @@
     <button id="new-concept" type="button" class="btn btn-success btn-sm">New Sub-Concept</button>
     <button id="suggest-concepts" type="button" class="btn btn-primary btn-sm">Suggest Sub-Concepts</button>
     <button id="query-concept" type="button" class="btn btn-primary btn-sm query-concept">Sub-Concept From Query</button>
+    <button id="classify-concept" type="button" class="btn btn-primary btn-sm">Classify</button>
     <button id="move-concept" type="button" class="btn btn-warning btn-sm">Move</button>
     <button id="delete-concept" type="button" class="btn btn-danger btn-sm">Delete</button>
-    <button id="vis-decrease" type="button" class="btn btn-default btn-xs">
+    <button id="vis-decrease" type="button" class="btn btn-default btn-xs" title="decrease visualization size">
       <span class="glyphicon glyphicon-minus"></span>
     </button>
-    <button id="vis-increase" type="button" class="btn btn-default btn-xs">
+    <button id="vis-increase" type="button" class="btn btn-default btn-xs" title="increase visualization size">
       <span class="glyphicon glyphicon-plus"></span>
     </button>
-    <button id="vis-download" type="button" class="btn btn-default btn-xs">
+    <button id="vis-download" type="button" class="btn btn-default btn-xs" title="download visualization">
       <span class="glyphicon glyphicon-download"></span>
     </button>
     <label for="visualization-picker">Visualization: </label>
