--- a/ontogen/js/templates/ontonew.handlebars
+++ b/ontogen/js/templates/ontonew.handlebars
@@ -1,88 +1,66 @@
-<!-- OntoNew Modal -->
-<div class="modal fade" id="newModal" data-backdrop="false" tabindex="-1" role="dialog" aria-labelledby="newModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Load Store</h4>
-      </div> <!-- /modal header -->
-      <div class="modal-body">
-        <div class="alert alert-danger fade in" id="nameAlert" style="display: none">
-          <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <p><strong>Invalid name for ontology!</strong> Change the name field and try again.</p>
-        </div>
-        <form role="form">
-          <div class="form-group">
-            <label for="inputOntoName">Ontology Name:</label>
-            <input type="text" class="form-control" id="inputOntoName" placeholder="onto_">
-          </div>
-        </form>
-        <div class="panel-group" id="accordion">
+<div class="page-header">
+  <h1>Create Ontology</h1>
+</div>
+<div class="alert alert-danger fade in" id="nameAlert" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>Invalid name for ontology!</strong> Change the name field and try again.</p>
+</div>
+  <form class="form-horizontal" role="form">
+     <div class="form-group">
+       <label  class="col-sm-4 control-label" for="inputOntoName">Ontology name</label>
+       <div class="col-sm-4">
+        <input type="text" class="form-control" id="inputOntoName" placeholder="onto_">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-4  control-label" for="storePicker">Store</label>
+      <div class="col-sm-8">
+        <select class="selectpicker" id="storePicker">
           {{#each stores}}
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse{{this.storeId}}">
-                  {{this.storeName}}
-                </a>
-              </h4>
-            </div> <!-- /panel heading -->
-            <div id="collapse{{this.storeId}}" class="panel-collapse collapse">
-              <div class="panel-body">
-                <!-- Create ontology Form -->
-                <div class="row">
-                  <div class="input-group">
-                    <div class="form-group">
-                      <label for="fieldPicker-{{this.storeName}}">Field: </label>
-                      <select class="selectpicker" id="fieldPicker-{{this.storeName}}">
-                        {{#each this.fields}}
-                        <option>{{this.fieldName}}</option>
-                        {{/each}} <!-- end of each field -->
-                      </select>
-                    </div> <!-- /from group -->
-
-                    <div class="form-group">
-                      <label for="stemmerPicker">Stemmer: </label>
-                      <select class="selectpicker" id="stemmerPicker">
-                        {{#each this.langopts.stemmer}}
-                        <option>{{this}}</option>
-                        {{/each}}
-                      </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="maxNgramLength">Max n-gram length: </label>
-                      <input type="number" id="maxNgramLength" value="3">
-                    </div>
-                    <div class="form-group">
-                      <label for="minNgramFreq">Min n-gram frequency: </label>
-                      <input type="number" id="minNgramFreq" value=5>
-                    </div>
-                    <div class="form-group">
-                      <label for="stopwordsPicker">Stopword list: </label>
-                      <select class="selectpicker" id="stopwordsPicker">
-                        {{#each this.langopts.stopwords}}
-                        <option>{{this}}</option>
-                        {{/each}}
-                      </select>
-                    </div>
-                    <!--
-                    <div class="form-group">
-                      <label for="customWordsFile">Load custom words: </label>
-                      <input type="file" id="customWordsFile">
-                    </div> -->
-                    <button class="btn btn-primary ontoCreate" data-storeName="{{this.storeName}}">Select</button>
-                  </div>  <!-- input group -->
-                </div> <!-- /row -->
-                <!-- / End of create ontology form -->
-              </div> <!--/panel body -->
-            </div> <!-- /collapse --> 
-            {{/each}} <!-- end of each store -->
-          </div> <!-- /panel (accordion) item -->
-        </div> <!-- /accordion -->
-      </div> <!-- /modal body -->
-      <div class="modal-footer">
-        <button id="close" type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-      </div> <!-- /modal footer -->
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div> <!-- /LoadView Modal -->
+          <option>{{this.storeName}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-4  control-label" for="fieldPicker">Field</label>
+      <div class="col-sm-8">
+        <select class="selectpicker" id="fieldPicker">
+          {{#each fields}}
+          <option>{{this.fieldName}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-4 control-label" for="stemmerPicker">Stemmer</label>
+      <div class="col-sm-8">
+        <select class="selectpicker" id="stemmerPicker">
+        {{#each this.langopts.stemmer}}
+        <option>{{this}}</option>
+        {{/each}}
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-4 control-label" for="stopwordsPicker">Stopwords</label>
+    <div class="col-sm-8">
+      <select class="selectpicker" id="stopwordsPicker">
+        {{#each this.langopts.stopwords}}
+        <option>{{this}}</option>
+        {{/each}}
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-4 control-label" for="maxngramlength">Max n-gram length</label>
+    <input class="col-sm-4" type="number" id="maxNgramLength" value="3">
+  </div>
+  <div class="form-group">
+    <label class="col-sm-4 control-label" for="minNgramFreq">Min n-gram frequency</label>
+    <input class="col-sm-4" type="number" id="minNgramFreq" value=5>
+  </div>
+</form>
+ <div class="col-sm-offset-4 col-sm-8">
+  <button class="btn btn-primary pull-right" id="ontoCreate">Create</button>
+</div>
