--- a/ontogen/js/templates/storefromdata.handlebars
+++ b/ontogen/js/templates/storefromdata.handlebars
@@ -1,19 +1,6 @@
 <div class="page-header">
   <h1>Create Store From Dataset</h1>
 </div>
-<div class="alert alert-danger fade in" id="nameAlert" style="display: none">
-  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <p><strong>Invalid name for store!</strong> Change the name field and try again.</p>
-</div>
-<div class="alert alert-danger fade in" id="fileAlert" style="display: none">
-  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <p><strong>No files selected!</strong> Select files and try again.</p>
-</div>
-<div class="alert alert-success fade in" id="createdAlert" style="display: none">
-  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <p><strong>Store created!</strong> You can now use this store.</p>
-</div>
-
 <form class="form-horizontal" role="form">
    <div class="form-group">
      <label  class="col-sm-4 control-label" for="inputStoreName">Store name</label>
@@ -22,7 +9,16 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="col-sm-4  control-label" for="files">Files</label>
+    <label class="col-sm-4 control-label" for="typePicker">File Type</label>
+    <div class="col-sm-8">
+      <select class="selectpicker" id="typePicker">
+        <option>JSON</option>
+        <option>CSV</option>
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-4  control-label" for="files"></label>
     <div class="col-sm-8">
       <input type="file" id="files" name="files[]" multiple />
     </div>
@@ -30,5 +26,5 @@
 </form>
 <output id="list"></output>
 <div class="col-sm-offset-4 col-sm-8">
-<button class="btn btn-primary pull-right" id="storeCreate">Create</button>
+<button class="btn btn-primary pull-right" id="storeCreate" data-loading-text="Creating...">Create</button>
 </div>
