--- a/ontogen/js/templates/answerbuttons.handlebars
+++ b/ontogen/js/templates/answerbuttons.handlebars
@@ -1,7 +1,7 @@
 <form class="form-horizontal" role="form">
   <div class="form-group">
-    <button data-alid={{id}} data-questionid={{questionId}} data-answer=1 type="button" class="btn btn-primary pull-left answer-question">Yes</button>
-    <button data-alid={{id}} data-questionid={{questionId}} data-answer=0 type="button" class="btn btn-default pull-left answer-question">No</button>
-    <button data-alid={{id}} type="button" data-dismiss="modal" class="btn btn-danger pull-right cancel-question">Cancel</button>
+    <button data-alid={{id}} data-questionid={{questionId}} data-answer=1 type="button" class="btn btn-primary pull-left answer-question" data-loading-text="Answering...">Yes</button>
+    <button data-alid={{id}} data-questionid={{questionId}} data-answer=0 type="button" class="btn btn-default pull-left answer-question" data-loading-text="Answering...">No</button>
+    <button data-alid={{id}} type="button" data-dismiss="modal" class="btn btn-danger pull-right cancel-question" data-loading-text="Canceling...">Cancel</button>
   </div>
 </form>
