--- a/ontogen/js/templates/buildmodal.handlebars
+++ b/ontogen/js/templates/buildmodal.handlebars
@@ -62,7 +62,7 @@
         </div> <!-- /accordion -->
       </div> <!-- /model body -->
       <div id="modal-build-footer" class="modal-footer">
-        <button id="do-build-cls" data-cid={{concept.$id}} type="button" class="btn btn-primary">Build</button>
+        <button id="do-build-cls" data-cid={{concept.$id}} type="button" class="btn btn-primary" data-loading-text="Building...">Build</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
       </div>
     </div><!-- /.modal-content -->
