--- a/ontogen/js/templates/movemodal.handlebars
+++ b/ontogen/js/templates/movemodal.handlebars
@@ -17,7 +17,7 @@
         </div> <!-- /from group -->
       </div>
       <div class="modal-footer">
-        <button data-cid={{concept.$id}} type="button" id='move-to-destination' class="btn btn-warning">Move</button>
+        <button data-cid={{concept.$id}} type="button" id='move-to-destination' class="btn btn-warning" data-loading-text="Moving...">Move</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div><!-- /.modal-content -->
