--- a/ontogen/js/templates/querymodal.handlebars
+++ b/ontogen/js/templates/querymodal.handlebars
@@ -13,13 +13,13 @@
         </div> <!-- /from group -->
         <div class="btn-group" id="query-type" data-toggle="buttons">
           <label class="btn btn-primary active">
-            <input type="radio" name="options" id="query-opt-simple"> Simple Query
+            <input type="radio" name="options" id="query-opt-simple">Simple Query
           </label>
           <label class="btn btn-primary">
-            <input type="radio" name="options" id="query-opt-al"> Use Active Learning
+            <input type="radio" name="options" id="query-opt-al">Active Learning
           </label>
           <label class="btn btn-primary">
-            <input type="radio" name="options" id="query-opt-gal"> Use Guided+Active Learning
+            <input type="radio" name="options" id="query-opt-gal">Guided+Active Learning
           </label>
         </div>
       </form>
