Updated for new qminer release. Refactored API. Bug fixes and minor additions.

--- a/ontogen/js/templates/suggesttable.handlebars
+++ b/ontogen/js/templates/suggesttable.handlebars
@@ -19,7 +19,7 @@
   <td>{{name}}</td>
   <td>{{keywords}}</td>
   <td>{{numDocs}}</td>
-  <td><button class="btn btn-primary add-suggested" id="suggested-{{lid}}" data-lid="{{lid}}" data-loading-text="Adding...">Add</button></td>
+  <td><button class="btn btn-success add-suggested" id="suggested-{{lid}}" data-lid="{{lid}}" data-loading-text="Adding...">Add</button></td>
 </tr>
 {{/each}}
 
