Added try classifier. fixed a couple of bugs and updated bootstrap.

--- a/ontogen/css/ontogen.css
+++ b/ontogen/css/ontogen.css
@@ -45,6 +45,11 @@ body {
   margin-right: 5px;
 }
 
+/* forms should feel whatever space is allocated to them */
+.form-inline .form-control {
+  width: 100%;
+}
+
 /* GRAPH */
 svg {
   background-color: #FFF;
