--- a/ontogen/js/templates/actionbar.handlebars
+++ b/ontogen/js/templates/actionbar.handlebars
@@ -1,14 +1,14 @@
 <div class="row">
 <form class="form-inline" role="form">
-  <div class="form-group col-md-3" style="padding-left:0px;">
+  <div class="form-group col-xs-2" style="padding-left:0px;">
     <label class="sr-only" for="inputName">Name</label>
     <input type="text" class="form-control input-sm" id="input-name" value="{{name}}" data-trigger="hover" data-title="Name">
   </div>
-  <div class="form-group col-md-4">
+  <div class="form-group col-xs-4">
     <label class="sr-only" for="inputKeywords">Keywords</label>
     <input type="text" class="form-control input-sm" id="input-keywords" value="{{keywords}}" data-trigger="hover" data-title="Keywords">
   </div>
-  <div class="form-group col-md-5">
+  <div class="form-group col-xs-6">
   <button id="change-concept" type="button" class="btn btn-primary btn-sm" data-loading-text="Changing...">Change</button>
   <button id="suggest-keywords" type="button" class="btn btn-warning btn-sm" data-loading-text="Loading...">Suggest Keywords</button>
   <!--  <button id="properties-concept" type="button" class="btn btn-default btn-sm">Properties</button> -->
