--- a/ontogen/js/templates/classifiers.handlebars
+++ b/ontogen/js/templates/classifiers.handlebars
@@ -13,6 +13,9 @@
     <td>{{ontology}}</td>
     <td>{{url}}</td>
     <td>
+      <button id="try-cls" type="button" class="btn btn-primary btn-sm" data-mid="{{id}}">Try</button>
+    </td>
+    <td>
       <button id="delete-cls" type="button" class="btn btn-danger btn-sm" data-mid="{{id}}">Delete</button>
     </td>
   </tr>
